# cargo-toolchain-manager

./: .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  releases.rs
