[package]
name = "cargo-toolchain-manager"
version = "0.2.1"
edition = "2024"
authors = ["Veniamin Albaev <albenik@gmail.com>"]
description = "A CLI helper to install all stable (or custom) Rust versions via rustup."
license = "MIT"
keywords = ["rust", "toolchain", "rustup", "version", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
documentation = "https://docs.rs/cargo-toolchain-manager"
repository = "https://github.com/albenik/cargo-toolchain-manager"
homepage = "https://github.com/albenik/cargo-toolchain-manager"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
clap-cargo = "0.15"
itertools = "0.14"
regex = "1"
reqwest = "0.12"
semver = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[[bin]]
name = "cargo-toolchain-manager"
path = "src/main.rs"
test = false
doc = false
